update maven badges