@@ -37,6 +37,9 @@
         <gson.version>2.9.0</gson.version>
         <jna.version>5.11.0</jna.version>
         <concurrent.version>1.0.2</concurrent.version>
+        <surefire.plugin.version>3.0.0-M7</surefire.plugin.version>
+        <maven.compiler.plugin>3.10.1</maven.compiler.plugin>
+        <maven.deploy.plugin>3.0.0</maven.deploy.plugin>
     </properties>
 
     <name>TON Java SDK</name>
@@ -122,7 +125,7 @@
             <dependency>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-deploy-plugin</artifactId>
-                <version>3.0.0</version>
+                <version>${maven.deploy.plugin}</version>
                 <type>maven-plugin</type>
             </dependency>
         </dependencies>
@@ -214,12 +217,30 @@
             <plugin>
                 <groupId>org.sonatype.plugins</groupId>
                 <artifactId>nexus-staging-maven-plugin</artifactId>
-                <version>1.6.7</version>
+                <version>1.6.13</version>
                 <extensions>true</extensions>
                 <configuration>
                     <serverId>ossrh</serverId>
                     <nexusUrl>https://s01.oss.sonatype.org/</nexusUrl>
                     <autoReleaseAfterClose>true</autoReleaseAfterClose>
+                </configuration>
+            </plugin>
+
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>${maven.compiler.plugin}</version>
+            </plugin>
+
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>${surefire.plugin.version}</version>
+                <configuration>
+                    <argLine>
+                        --add-opens java.base/java.lang=ALL-UNNAMED
+                        --add-opens java.base/java.util=ALL-UNNAMED
+                    </argLine>
                 </configuration>
             </plugin>
 
